feat: add descriptions in Oauth Points
