# src/services/user-service/controllers/auth-google-controller.ts
@@ -44,13 +44,15 @@ passport.use(
 
 // Start the authentication flow
 authGoogleRouter.get('/login', hasValidEventParam, async (req: Request, res: Response, next) => {
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Users-OAuth-Google']
+  // #swagger.ignore = true
   Logger.info(`${GOOGLE_APP}: Request for Oauth has been received successfully on sse Id ${req.sseID}`);
   passport.authenticate('google', { scope: ['email'] })(req, res, next);
 });
 
 authGoogleRouter.get('/callback', passport.authenticate('google', { session: false }), async (req, res) => {
-  // #swagger.tags = ['Users']
+ // #swagger.tags = ['Users-OAuth-Google']
+ // #swagger.ignore = true
   try {
     let token = '';
     let addedUser = {};
@@ -111,7 +113,7 @@ authGoogleRouter.get('/callback', passport.authenticate('google', { session: fal
 });
 
 authGoogleRouter.post('/event', hasValidEventHeader, hasValidAccessTokenHeader, async (req, res) => {
-  // #swagger.tags = ['Users']
+  // #swagger.tags = ['Users-OAuth-Google']
   try {
     Logger.info(`Request body tokenUUID ${req?.accessTokenID}`);
     Logger.info(`Request body sseUUID ${req?.sseID}`);
